School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/context/valid/OwnTests_stepB/valid/tests_obj/testObjHeritage.deca
//Declaration d'une classe avec extends
class A {
    int x;
}

class B extends A {
    int y;
}

