School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/context/invalid/OwnTests_stepB/invalid/tests_obj/testCirculaire.deca
//Déclaration de classe qui forme un cercle d'extension
class A extends C{
}

class B extends A{
}

class C extends B {
}